--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-flash": "0.1.1",
     "connect-mongo": "0.8.1",
     "mongodb": "2.0.28",
-    "multer": "0.1.8"
+    "multer": "0.1.8",
+    "bson": "*"
   }
 }
